--- a/index.html
+++ b/index.html
@@ -1,2 +1,21 @@
-<h1>Super Rad Net Art</h1>
-<h2>by Jessica</h2>
+<!DOCTYPE html>
+<html lang="en-ca">
+  <head>
+    <title>Exercise 7: Github Setup</title>
+    <meta charset="utf-8">
+  </head>
+
+  <body>
+
+    <style>
+      body {
+        background-color: #ed9fc3;
+      }
+    </style>
+
+    <h1>Jessica Kitamura</h1>
+    <h2>Github Setup Complete!</h2>
+    <img src="calcifer.gif" alt="Calcifer Esting Egg Shells">
+
+  </body>
+</html>
